--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,19 @@
 ---
 layout: default
 ---
-<article class="post">
+<div class="post">
+
+  <aside class="sidebar">
+    <img src="{{site.baseurl}}/images/opendds-notext.png"/>
+    <img src="{{site.baseurl}}/images/oci-new.png"/>
+  </aside>
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
 
-  <div class="post-content">
+  <article class="post-content">
     {{ content }}
-  </div>
+  </article>
 
-</article>
+</div>
