--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,17 +14,38 @@ dl, dd, ol, ul, figure {
  * Basic styling
  */
 body {
-    font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
+    font-family: $base-font-family;
+    font-size: $base-font-size;
+    line-height: $base-line-height;
+    font-weight: 300;
     color: $text-color;
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
-    -webkit-font-feature-settings: "kern" 1;
-    -moz-font-feature-settings: "kern" 1;
-    -o-font-feature-settings: "kern" 1;
-    font-feature-settings: "kern" 1;
-    font-kerning: normal;
 }
 
+
+/**
+ * classes adapted from opendds.org
+ */
+.headertext, .colortitle {
+    font-size: 24px;
+    font-weight: bold;
+}
+.subheadertext {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+#documentationtable {
+  border-collapse: collapse;
+  border: 1px solid;
+}
+
+#documentationtable tr td {
+  vertical-align: top;
+  border: 1px solid;
+  padding: 5px;
+}
 
 
 /**
@@ -69,6 +90,10 @@ ul, ol {
     margin-left: $spacing-unit;
 }
 
+.page-content ul {
+    padding-left: 25px;
+}
+
 li {
     > ul,
     > ol {
@@ -82,7 +107,7 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-    font-weight: $base-font-weight;
+    font-weight: 300;
 }
 
 
@@ -90,7 +115,7 @@ h1, h2, h3, h4, h5, h6 {
 /**
  * Links
  */
-a {
+.page-content a[href] {
     color: $brand-color;
     text-decoration: none;
 
@@ -156,8 +181,8 @@ pre {
  * Wrapper
  */
 .wrapper {
-    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
+    max-width: -webkit-calc(1200px - (#{$spacing-unit} * 2));
+    max-width:         calc(1200px - (#{$spacing-unit} * 2));
     margin-right: auto;
     margin-left: auto;
     padding-right: $spacing-unit;
@@ -165,14 +190,12 @@ pre {
     @extend %clearfix;
 
     @include media-query($on-laptop) {
-        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
-        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
+        max-width: -webkit-calc(800px - (#{$spacing-unit}));
+        max-width:         calc(800px - (#{$spacing-unit}));
         padding-right: $spacing-unit / 2;
         padding-left: $spacing-unit / 2;
     }
 }
-
-
 
 /**
  * Clearfix
