--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,51 +1,131 @@
-/**
- * Site header
- */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
-    min-height: 56px;
-
-    // Positioning context for the mobile navigation icon
+    font-weight: bold;
+    background-color: hsl(205, 100%, 32%);
     position: relative;
+    a { color: white; text-decoration: none; }
 }
 
 .site-title {
-    font-size: 26px;
-    font-weight: 300;
-    line-height: 56px;
-    letter-spacing: -1px;
+    font-size: 18px;
+    line-height: 20px;
+    height: 20px;
     margin-bottom: 0;
     float: left;
+    padding: $spacing-unit;
+}
 
-    &,
-    &:visited {
-        color: $grey-color-dark;
-    }
+.sidebar {
+    width: 20%;
+    float: right;
+}
+
+.sidebar:after {
+    clear: both;
 }
 
 .site-nav {
-    float: right;
-    line-height: 56px;
+    float: left;
+    line-height: normal;
+    margin: 0px auto;
+    box-sizing: border-box;
 
-    .menu-icon {
-        display: none;
+    .menu-icon { display: none; }
+
+    .toggle, [id^="drop"] { display: none; }
+
+    a {
+        color: white;
+        text-decoration: none;
     }
 
-    .page-link {
-        color: $text-color;
-        line-height: $base-line-height;
+    .arrow { font-size: 11px; }
 
-        // Gaps between nav items, but not on the last one
-        &:not(:last-child) {
-            margin-right: 20px;
+    .page-link { line-height: $base-line-height; }
+
+    ul {
+        padding: 0 10px;
+        line-height: 18px;
+        list-style: none;
+        position:relative;
+        display:inline-table;
+        li { display: inline-block; }
+    }
+
+    .trigger {
+        line-height: 20px;
+        margin-bottom: 0;
+        margin-left: 0;
+        display: block;
+        > li > a {
+            padding-top: 12px;
+            padding-bottom: 15px;
+            padding-left: 15px;
+            padding-right: 15px;
+            border-top: 3px solid transparent;
+            min-height: 22px;
+            font-weight: bold;
+            position: relative;
+        }
+    }
+
+    .sub-menu {
+        opacity: 0;
+        position: absolute;
+        visibility: hidden;
+        transition: visibility 0.25s, opacity 0.25s linear;
+        z-index: 1;
+        display: none;
+        background: #FFF;
+        padding: 0;
+        margin-left: 0;
+        box-shadow: 0 6px 12px hsla(0, 0, 0, 0.4);
+        font-size: 14px;
+        li {
+            display: block;
+            padding: 3px 20px;
+            position: relative;
+            white-space: nowrap;
+            a { color: hsl(205, 100%, 32%); }
+        }
+        ul {
+            position: absolute;
+            left: 100%;
+            top: 0;
+        }
+    }
+
+    @include anti-media-query($on-palm) {
+
+        ul li:hover > ul {
+            opacity: 1;
+            visibility: visible;
+            transition: visibility 0s, opacity 0.15s linear;
+        }
+
+        .trigger {
+            li > a { display: inline-block; }
+
+            > li:hover {
+                > a {
+                    background-color: white;
+                    border-top-color: hsl(39, 63%, 56%);
+                    color: hsl(205, 100%, 32%);
+                }
+                > a:hover { color: hsl(37, 54%, 43%); }
+                .sub-menu { display: block; }
+            }
+        }
+
+        .sub-menu {
+            li:hover > a { color: rgb(169, 123, 50); }
+            .mobile { display: none; }
         }
     }
 
     @include media-query($on-palm) {
         position: absolute;
-        top: 9px;
-        right: $spacing-unit / 2;
+        top: 7px;
+        right: 7px;
         background-color: $background-color;
         border: 1px solid $grey-color-light;
         border-radius: 5px;
@@ -63,36 +143,81 @@
             > svg {
                 width: 18px;
                 height: 15px;
-
-                path {
-                    fill: $grey-color-dark;
-                }
+                path { fill: hsl(205, 100%, 32%); }
             }
+        }
+
+        #drop:checked ~ label path { fill: rgb(169, 123, 50); }
+
+        .toggle ~ a { display: none; }
+
+        .toggle { 
+            display: block;
+            color: hsl(205, 100%, 32%);
+        }
+
+        [id^="drop"]:checked {
+            ~ ul {
+                display: block;
+                visibility: visible;
+                opacity: 1;
+            }
+            ~ label { color: rgb(169, 123, 50); }
         }
 
         .trigger {
             clear: both;
             display: none;
+            margin-bottom: 5px;
+            margin-left: 0;
+            > li {
+                clear: left;
+                display: block;
+                text-align: right;
+                line-height: 1.25;
+                padding: 5px 10px;
+                margin: 0;
+                a {
+                    color: hsl(205, 100%, 32%);
+                    border-top: 0;
+                    padding: 0;
+                }
+            }
         }
 
-        &:hover .trigger {
-            display: block;
-            padding-bottom: 5px;
+        .sub-menu {
+            position: static;
+            box-shadow: 6px 6px 12px hsla(0, 0, 0, 0.4);
+            ul {
+                position: static;
+            }
         }
 
         .page-link {
             display: block;
             padding: 5px 10px;
-
-            &:not(:last-child) {
-                margin-right: 0;
-            }
-            margin-left: 20px;
         }
     }
 }
 
 
+.faq_wrap {
+    max-width: 820px;
+}
+
+.faq_cat_hdr {
+    padding-top: 10px;
+}
+
+.faq_q {
+    margin: 10px 0;
+    font-weight: bold;
+    color: hsl(205, 100%, 32%)
+}
+
+.faq_a {
+    padding-bottom: 10px;
+}
 
 /**
  * Site footer
