--- a/css/main.scss
+++ b/css/main.scss
@@ -6,32 +6,28 @@
 
 
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: 'Open Sans', sans-serif;
 $base-font-size:   16px;
-$base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
-$spacing-unit:     30px;
+$spacing-unit:     15px;
 
-$text-color:       #111;
+$text-color:       #3f3f3f;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$brand-color:      #0062a3;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
-// Width of the content area
-$content-width:    800px;
-
-$on-palm:          600px;
+$on-palm:          850px;
 $on-laptop:        800px;
 
 
 
-// Use media queries like this:
-// @include media-query($on-palm) {
+// Using media queries with like this:
+// @include media-query($palm) {
 //     .wrapper {
 //         padding-right: $spacing-unit / 2;
 //         padding-left: $spacing-unit / 2;
@@ -43,7 +39,11 @@ $on-laptop:        800px;
     }
 }
 
-
+@mixin anti-media-query($device) {
+    @media screen and (min-width: $device + 1) {
+        @content;
+    }
+}
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
