--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 <div class="post">
 
   <aside class="sidebar">
-    <img src="{{site.baseurl}}/images/opendds-notext.png"/>
+    <img src="{{site.baseurl}}/images/TAO-logo-1.png"/>
     <img src="{{site.baseurl}}/images/oci-new.png"/>
   </aside>
 
